--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "realrashid/sweet-alert": "^7.0"
+        "php-open-source-saver/jwt-auth": "^2.1"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
