--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "fzaninotto/faker": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
-        "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7",
-        "php-open-source-saver/jwt-auth": "^2.1"
+        "laravel/sanctum": "^3.2",
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
